If a defaulting plugin made progress, re-zonk wanteds before built-in defaulting
Fixes #23821.

(cherry picked from commit f369f3c838c610e9464e3f7302f8db16ad814306)

--- a/testsuite/tests/plugins/defaulting-plugin/defaulting-plugin.cabal
+++ b/testsuite/tests/plugins/defaulting-plugin/defaulting-plugin.cabal
@@ -6,5 +6,5 @@ version: 0.1.0.0
 library
   default-language: Haskell2010
   build-depends: base, ghc, containers
-  exposed-modules: DefaultLifted
+  exposed-modules: DefaultLifted DefaultInterference
   ghc-options: -Wall
