lint-codes: add new modes of operation
This commit adds two new modes of operation to the lint-codes
utility:

  list - list all statically used diagnostic codes
  outdated - list all outdated diagnostic codes

The previous behaviour is now:

  test - test consistency and coverage of diagnostic codes

--- a/testsuite/tests/diagnostic-codes/Makefile
+++ b/testsuite/tests/diagnostic-codes/Makefile
@@ -3,4 +3,4 @@ TOP=../..
 LIBDIR := "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
 codes:
-	(cd $(TOP)/.. && $(LINT_CODES) $(LIBDIR))
+	(cd $(TOP)/.. && $(LINT_CODES) test $(LIBDIR))
