packaging: Build manpage in separate directory to other documentation
We were installing two copies of the manpage:

* One useless one in the `share/doc` folder, because we copy the doc/
  folder into share/
* The one we deliberately installed into `share/man` etc

The solution is to build the manpage into the `manpage` directory when
building the bindist, and then just install it separately.

Fixes #23707

(cherry picked from commit 026f040ad0297cd1b735307656b8f5cf33d1e71e)

--- a/hadrian/bindist/Makefile
+++ b/hadrian/bindist/Makefile
@@ -200,7 +200,7 @@ install_docs:
 	fi
 
 MAN_SECTION := 1
-MAN_PAGES := doc/users_guide/build-man/ghc.1
+MAN_PAGES := manpage/ghc.1
 
 .PHONY: install_man
 install_man:
