lint-codes: add Hadrian targets
This commit adds new Hadrian targets:

  codes, codes:used - list all used diagnostic codes
  codes:outdated - list outdated diagnostic codes

This allows users to easily query GHC for used and outdated
diagnostic codes, e.g.

  hadrian/build -j --flavour=<..> codes

will list all used diagnostic codes in the command line by running
the lint-codes utility in the "list codes" mode of operation.

The diagnostic code consistency and coverage test is still run as usual,
through the testsuite:

  hadrian/build test --only="codes"

--- a/hadrian/hadrian.cabal
+++ b/hadrian/hadrian.cabal
@@ -78,6 +78,7 @@ executable hadrian
                        , Rules.BinaryDist
                        , Rules.CabalReinstall
                        , Rules.Clean
+                       , Rules.Codes
                        , Rules.Compile
                        , Rules.Dependencies
                        , Rules.Docspec
