Add CodesUtil as a proper Hadrian builder
This makes it work uniformly like the other builders we invoke.

--- a/hadrian/hadrian.cabal
+++ b/hadrian/hadrian.cabal
@@ -102,6 +102,7 @@ executable hadrian
                        , Settings.Builders.Common
                        , Settings.Builders.Cc
                        , Settings.Builders.Configure
+                       , Settings.Builders.CodesUtil
                        , Settings.Builders.DeriveConstants
                        , Settings.Builders.GenPrimopCode
                        , Settings.Builders.Ghc
