Add -fforce-relink flag
Due to bugs like #23724 it could be useful to override the relinking
checker. The only way to do this at the moment is to use -fforce-recomp,
which is a very big hammer.

It is useful to provide a flag which just causes the linking step
to always happen if there are any more issues in this area.

Fixes #23912

--- a/testsuite/tests/driver/Makefile
+++ b/testsuite/tests/driver/Makefile
@@ -809,4 +809,12 @@ T23339B:
 	# Check that the file is kept and is the right one
 	find . -name "*.c" -exec cat {} \; | grep "init__ip_init"
 
+T23912:
+	$(RM) T23912.hi
+	$(RM) T23912$(OBJSUFFIX)
+	$(RM) -rf "$(PWD)/tmp"
+	mkdir -p tmp
+	"$(TEST_HC)" -tmpdir "$(PWD)/tmp" $(TEST_HC_OPTS) -v0 T23912.hs -fforce-relink
+	"$(TEST_HC)" -tmpdir "$(PWD)/tmp" $(TEST_HC_OPTS) -v1 T23912.hs -fforce-relink
+
 
