--- a/hadrian/bootstrap/hadrian-bootstrap-gen.cabal
+++ b/hadrian/bootstrap/hadrian-bootstrap-gen.cabal
@@ -8,13 +8,13 @@ executable hadrian-bootstrap-gen
   ghc-options:      -Wall
   main-is:          Main.hs
   build-depends:
-    , aeson                  ^>=1.5.2.0
-    , base                   ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0
-    , bytestring             ^>=0.10.8.2
-    , Cabal                  ^>=3.6.0.0
-    , cabal-install-parsers  ^>=0.4.0.1
+    , aeson                  ^>=1.5.2.0  || ^>= 2.0 || ^>= 2.1
+    , base                   ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0
+    , bytestring             ^>=0.10.8.2 || ^>= 0.11.4.0
+    , Cabal-syntax           ^>=3.8.0.0
+    , cabal-install-parsers  ^>=0.4.0.1 || ^>= 0.5
     , cabal-plan             ^>=0.7.0.0
     , containers             ^>=0.6.0.1
-    , text                   ^>=1.2.3.0
+    , text                   ^>=1.2.3.0 || ^>= 2.0
     , topograph              ^>=1.0.0.1
     , transformers           ^>=0.5.6.2
