--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ variables:
   DOCKER_REV: 572353e0644044fe3a5465bba4342a9a0b0eb60e
 
   # Commit of ghc/ci-images repository from which to pull Docker images
+  # for bootstrapping
   BOOTSTRAP_DOCKER_REV: 245d4c047dcf9e6d1894d12defcc3f46b787a5ae
 
   # Sequential version number of all cached things.
@@ -89,8 +90,6 @@ workflow:
       DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_2:$BOOTSTRAP_DOCKER_REV"
     - GHC_VERSION: 9.4.7
       DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_4:$BOOTSTRAP_DOCKER_REV"
-    - GHC_VERSION: 9.6.2
-      DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_6:$BOOTSTRAP_DOCKER_REV"
 
 # Allow linters to fail on draft MRs.
 # This must be explicitly transcluded in lint jobs which
