--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,6 @@ variables:
   # Commit of ghc/ci-images repository from which to pull Docker images
   DOCKER_REV: 572353e0644044fe3a5465bba4342a9a0b0eb60e
 
-  # Commit of ghc/ci-images repository from which to pull Docker images
-  # for bootstrapping
-  BOOTSTRAP_DOCKER_REV: 245d4c047dcf9e6d1894d12defcc3f46b787a5ae
-
   # Sequential version number of all cached things.
   # Bump to invalidate GitLab CI cache.
   CACHE_REV: 10
@@ -87,9 +83,9 @@ workflow:
 .bootstrap_matrix : &bootstrap_matrix
   matrix:
     - GHC_VERSION: 9.2.8
-      DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_2:$BOOTSTRAP_DOCKER_REV"
+      DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_2:$DOCKER_REV"
     - GHC_VERSION: 9.4.7
-      DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_4:$BOOTSTRAP_DOCKER_REV"
+      DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_4:$DOCKER_REV"
 
 # Allow linters to fail on draft MRs.
 # This must be explicitly transcluded in lint jobs which
