--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,7 @@ workflow:
 .bootstrap_matrix : &bootstrap_matrix
   matrix:
     - GHC_VERSION: 9.2.8
-      DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_2:$DOCKER_REV"
+      DOCKER_IMAGE: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10-ghc9_2:572353e0644044fe3a5465bba4342a9a0b0eb60e"
 
 # Allow linters to fail on draft MRs.
 # This must be explicitly transcluded in lint jobs which
