EPA: Deal with header comments attached to first module decl
After parsing, fix up the header comments by looking for a `where`
keyword and moving any comments in the first declaration that precede
it into the header comments.

This only affects a specific scenario where
- There are comments in the lines before the module header
- There is a comment on the same line as the 'where', preceding it
- There is a decl immediately following the line with the comment and
  'where' token

Closes #23984

Ported from https://github.com/alanz/ghc-exactprint/commit/1e01e2e08c73103494a929f98c416e9e2bd25d4f

--- a/testsuite/tests/printer/Makefile
+++ b/testsuite/tests/printer/Makefile
@@ -811,3 +811,8 @@ Test23885:
 	# ppr is not currently unicode aware
 	# $(CHECK_PPR)   $(LIBDIR) Test23885.hs
 	$(CHECK_EXACT) $(LIBDIR) Test23885.hs
+
+.PHONY: Test23984
+Test23984:
+	$(CHECK_PPR)   $(LIBDIR) Test23984.hs
+	$(CHECK_EXACT) $(LIBDIR) Test23984.hs
